--- a/index.html
+++ b/index.html
@@ -4,3 +4,13 @@
 <meta charset="UTF-8">
 <title>Mascotas</title>
 <body>
+	<form action="" method="post">
+		<div>
+			<label for="date">Fecha de solicitud</label>
+			<input type="date" name="solicitud">
+		</div>
+		<div>
+			<label for="name">Nombre Completo</label>
+			<input type="name" name="nombre">
+		</div>
+		
