--- a/index.html
+++ b/index.html
@@ -13,4 +13,14 @@
 			<label for="name">Nombre Completo</label>
 			<input type="name" name="nombre">
 		</div>
-		
+		<div>
+			<label for="mail">Correo Electronico</label>
+			<input type="email" name="mail">
+		</div>
+		<div>
+			Seleccionar sexo
+			<label for="hombre">Hombre</label>
+			<input type="checkbox" name="hombre">
+			<label for="mujer">Mujer</label>
+			<input type="checkbox" name="mujer">
+			
