--- a/index.html
+++ b/index.html
@@ -19,8 +19,12 @@
 		</div>
 		<div>
 			Seleccionar sexo
+			<input type="radio" name="hombre">
 			<label for="hombre">Hombre</label>
-			<input type="checkbox" name="hombre">
+			<input type="radio" name="mujer">
 			<label for="mujer">Mujer</label>
-			<input type="checkbox" name="mujer">
-			
+			<input type="radio" name="otro">
+			<label for="otro">Otro</label>
+		</div>
+		<div>
+			<label for="">
