--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 <body>
 	<form action="" method="post">
 		<div>
+			<button type="button">Acceder al formulario</button>
+		</div>
+		<div>
 			<label for="date">Fecha de solicitud</label>
 			<input type="date" name="solicitud">
 		</div>
@@ -27,4 +30,6 @@
 			<label for="otro">Otro</label>
 		</div>
 		<div>
-			<label for="">
+			<label for="direccion">Dirección</label>
+			<input type="direccion" name="direccion">
+		</div>
