--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 		</div>
 		<div>
 			<label for="name">Nombre Completo</label>
-			<input type="name" name="nombre">
+			<input type="name" name="nombre" placeholder="Pepito Pérez">
 		</div>
 		<div>
 			<label for="mail">Correo Electronico</label>
-			<input type="email" name="mail">
+			<input type="email" name="mail" placeholder="alguien@ejemplo.com">
 		</div>
 		<div>
 			Seleccionar sexo
@@ -31,5 +31,5 @@
 		</div>
 		<div>
 			<label for="direccion">Dirección</label>
-			<input type="direccion" name="direccion">
+			<input type="direccion" name="direccion" placeholder="Carrera 22 #22c-22">
 		</div>
