--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
 			<label for="otro">Otro</label>
 		</div>
 		<div>
+			<label for="departamento">Departamento</label>
+			<input type="departamento" name="departamento">
+			<option value="AN">Antioquia</option>
+
+		<div>
 			<label for="direccion">Dirección</label>
 			<input type="direccion" name="direccion" placeholder="Carrera 22 #22c-22">
 		</div>
