--- a/index.html
+++ b/index.html
@@ -32,6 +32,56 @@
 		<div>
 			<label for="departamento">Departamento</label>
 			<input type="departamento" name="departamento">
+			<select>
+				<option>Amazonas</option>
+				<option>Antioquia</option>
+				<option>Arauca</option>
+				<option>Atlántico</option>
+				<option>Bogotá</option>
+				<option>Bolivar</option>
+				<option>Boyacá</option>
+				<option>Caldas</option>
+				<option>Caquetá</option>
+				<option></option>
+				<option></option>
+				<option></option>
+				<option></option>
+				<option></option>
+				<option></option>
+				<option></option>
+				<option></option>
+				<option></option>
+				<option></option>
+				<option></option>
+				<option></option>
+				<option></option>
+				<option></option>
+				<option></option>
+				<option></option>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+				
+			</select>
 			<option value="AN">Antioquia</option>
 
 		<div>
