--- a/index.html
+++ b/index.html
@@ -31,8 +31,6 @@
 		</div>
 		<div>
 			<label for="departamento">Departamento</label>
-			<input type="departamento" name="departamento">
-			<select>
 				<option>Amazonas</option>
 				<option>Antioquia</option>
 				<option>Arauca</option>
@@ -42,22 +40,31 @@
 				<option>Boyacá</option>
 				<option>Caldas</option>
 				<option>Caquetá</option>
-				<option></option>
-				<option></option>
-				<option></option>
-				<option></option>
-				<option></option>
-				<option></option>
-				<option></option>
-				<option></option>
-				<option></option>
-				<option></option>
-				<option></option>
-				<option></option>
-				<option></option>
-				<option></option>
-				<option></option>
-				<option></option>
+				<option>Casanare</option>
+				<option>Cauca</option>
+				<option>Cesar</option>
+				<option>Chocó</option>
+				<option>Cordoba</option>
+				<option>Cundinamarca</option>
+				<option>Guainía</option>
+				<option>Guaviare</option>
+				<option>Huila</option>
+				<option>La Guajira</option>
+				<option>Magdalena</option>
+				<option>Meta</option>
+				<option>Nariño</option>
+				<option>Norte de Santander</option>
+				<option>Putumayo</option>
+				<option>Quindio</option>
+				<option>Risaralda</option>
+				<option>San Andres y Providencia</option>
+				<option>Santander</option>
+				<option>Sucre</option>
+				<option>Tolima</option>
+				<option>Valle del Cauca</option>
+				<option>Vaupés</option>
+				<option>Vichada</option>
+				
 
 
 
