--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 		</div>
 		<div>
 			<label for="departamento">Departamento</label>
+			<select>
 				<option>Amazonas</option>
 				<option>Antioquia</option>
 				<option>Arauca</option>
@@ -64,7 +65,8 @@
 				<option>Valle del Cauca</option>
 				<option>Vaupés</option>
 				<option>Vichada</option>
-				
+				</select>
+
 
 
 
