--- a/index.html
+++ b/index.html
@@ -23,10 +23,13 @@
 		</br>
 		</div>
 		<div>
+			<br>
 			<label for="mail">Correo Electronico</label>
 			<input type="email" name="mail" placeholder="alguien@ejemplo.com">
+		</br>
 		</div>
 		<div>
+			<br>
 			Seleccionar sexo
 			<input type="radio" name="hombre">
 			<label for="hombre">Hombre</label>
@@ -34,8 +37,10 @@
 			<label for="mujer">Mujer</label>
 			<input type="radio" name="otro">
 			<label for="otro">Otro</label>
+		</br>
 		</div>
 		<div>
+			<br>
 			<label for="departamento">Departamento</label>
 			<select>
 				<option>Amazonas</option>
@@ -72,7 +77,10 @@
 				<option>Vaupés</option>
 				<option>Vichada</option>
 				</select>
-		<div>
+			</br>
+		</div>
+		<div><br>
 			<label for="direccion">Dirección</label>
 			<input type="direccion" name="direccion" placeholder="Carrera 22 #22c-22">
+		</br>
 		</div>
