--- a/index.html
+++ b/index.html
@@ -84,3 +84,36 @@
 			<input type="direccion" name="direccion" placeholder="Carrera 22 #22c-22">
 		</br>
 		</div>
+		<div><br>
+Seleccione el tipo de domicilio
+
+			<input type="radio" name="casa">
+			<label for="casa">Casa</label>
+			<input type="radio" name="apartamento">
+			<label for="apartamento">Apartamento</label>
+			<input type="radio" name="finca">
+			<label for="finca">Finca</label>
+<input type="radio" name="otro"
+<label </br>
+</div>
+<section><br>
+Especifique "otro"
+<label for="text"><br><br>
+<input type="text" name="text">
+</section><br>
+<section>
+Numero de integrantes del domicilio<br></br>
+<label for="text">
+<input type="text" name="text">
+</section>
+<div>
+¿Tienes experiencia con los animales?
+<input type="radio" name="si">
+<label for="si">Si</label>
+<input type="radio" name="no>
+<label for="no">No</label>
+</div>
+<div> 
+	¿Cuales son tus ingresos mensuales?
+	<input type="number" name="ingresos" placeholder="$500.000">
+	<label for="ingresos">
