--- a/index.html
+++ b/index.html
@@ -113,7 +113,12 @@ Numero de integrantes del domicilio<br></br>
 <input type="radio" name="no>
 <label for="no">No</label>
 </div>
-<div> 
+<div> <br>
 	¿Cuales son tus ingresos mensuales?
-	<input type="number" name="ingresos" placeholder="$500.000">
+	<input type="number" name="ingresos" min="0" placeholder="$500.000">
 	<label for="ingresos">
+	</label></br>
+</div>
+<div>
+	<label for="tiempo">¿Cuanto tiempo piensas dedicarle a tu mascota?</label>
+	<input type="text" name="texto">
