--- a/index.html
+++ b/index.html
@@ -119,6 +119,9 @@ Numero de integrantes del domicilio<br></br>
 	<label for="ingresos">
 	</label></br>
 </div>
-<div>
+<div><br>
 	<label for="tiempo">¿Cuanto tiempo piensas dedicarle a tu mascota?</label>
 	<input type="text" name="texto">
+</br></div>
+<div>
+	
