--- a/index.html
+++ b/index.html
@@ -96,14 +96,12 @@ Seleccione el tipo de domicilio
 <input type="radio" name="otro"
 <label </br>
 </div>
-<section><br>
-Especifique "otro"
-<label for="text"><br><br>
+<section>
+<label for="text">Especifique "otro"</label>
 <input type="text" name="text">
 </section><br>
 <section>
-Numero de integrantes del domicilio<br></br>
-<label for="text">
+<label for="text">Número de integrantes del domicilio</label>
 <input type="text" name="text">
 </section>
 <div>
@@ -124,4 +122,4 @@ Numero de integrantes del domicilio<br></br>
 	<input type="text" name="texto">
 </br></div>
 <div>
-	
+
