--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@ Seleccione el tipo de domicilio
 </section><br>
 <section>
 <label for="text">Número de integrantes del domicilio</label>
-<input type="text" name="text">
+<input type="number" min="1"name="text">
 </section>
-<div>
+<div><br>
 ¿Tienes experiencia con los animales?
 <input type="radio" name="si">
 <label for="si">Si</label>
