--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ Seleccione el tipo de domicilio
 <input type="radio" name="otro"
 <label </br>
 </div>
-<section>
+<section><br>
 <label for="text">Especifique "otro"</label>
 <input type="text" name="text">
 </section><br>
@@ -121,5 +121,11 @@ Seleccione el tipo de domicilio
 	<label for="tiempo">¿Cuanto tiempo piensas dedicarle a tu mascota?</label>
 	<input type="text" name="texto">
 </br></div>
-<div>
+<div><br>
+	<label for="date">Fecha de nacimiento</label>
+	<input type="date" name="date">
+</div>
+<div><br>
+	<label for="telefono">Telefono</label>
+	<input type="tel" name="telefono" size="7" placeholder="557776">
 
