--- a/index.html
+++ b/index.html
@@ -127,5 +127,5 @@ Seleccione el tipo de domicilio
 </div>
 <div><br>
 	<label for="telefono">Telefono</label>
-	<input type="tel" name="telefono" size="7" placeholder="557776">
+	<input type="tel" name="telefono" pattern="[0-7]{7}" placeholder="5557776"
 
