--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 <body>
 	<form action="" method="post">
 		<div>
-			<br>
+			<br><center>
 			<button type="button">Acceder al formulario</button>
-		</br>
+		</br></center>
 		</div>
 		<div>
 			<br>
