--- a/index.html
+++ b/index.html
@@ -79,9 +79,10 @@
 				</select>
 			</br>
 		</div>
-		<div><select>Ciudad<br>
+		<div><br>
 			<label for="ciudad">Ciudad</label>
-			<option value="1">Abriaqu</option>
+			<select> 
+			<option value="1">Abriaqui</option>
 	<option value="2">Acacías</option>
 	<option value="3">Acandí</option>
 	<option value="4">Acevedo</option>
@@ -1213,6 +1214,22 @@ Seleccione el tipo de domicilio
 <input type="radio" name="no>
 <label for="no">No</label>
 </div>
+<div> 
+		<label for="ingresos">¿Cuales son tus ingresos mensuales?</label>
+		<input type="number" min="0" placeholder="$500.000">
+	</div>
+	<div>
+		<label for="text">¿Cuanto tiempo piensas dedicarle a tu mascota?</label>
+		<input type="text">
+        </div>
+    <div>
+        	<label for="date">Fecha de nacimiento</label>
+        	<input type="date" name="date">
+        	</div>
+        	<div>
+        		<label for="tel">Telefono</label>
+        		<input type="tel" name="telefono" placeholder="5557776">
+        	</div>
 
 
 
