--- a/index.html
+++ b/index.html
@@ -1204,7 +1204,7 @@ Seleccione el tipo de domicilio
 <input type="text" name="text">
 </section><br>
 <section>
-<label for="text">Número de integrantes del domicilio</label>
+<label for="number">Número de integrantes del domicilio</label>
 <input type="number" min="1"name="text">
 </section>
 <div><br>
@@ -1214,22 +1214,27 @@ Seleccione el tipo de domicilio
 <input type="radio" name="no>
 <label for="no">No</label>
 </div>
-<div> 
+<div> <br>
 		<label for="ingresos">¿Cuales son tus ingresos mensuales?</label>
 		<input type="number" min="0" placeholder="$500.000">
 	</div>
-	<div>
+	<div><br>
 		<label for="text">¿Cuanto tiempo piensas dedicarle a tu mascota?</label>
 		<input type="text">
         </div>
-    <div>
+    <div><br>
         	<label for="date">Fecha de nacimiento</label>
         	<input type="date" name="date">
         	</div>
-        	<div>
+        	<div><br>
         		<label for="tel">Telefono</label>
         		<input type="tel" name="telefono" placeholder="5557776">
         	</div>
+        	<div><br>
+        		<label for="text">¿Por qué quieres adoptar una mascota?</label>
+        		<input type="text" name="texto">
+        	</div>
+
 
 
 
