--- a/index.html
+++ b/index.html
@@ -1215,7 +1215,7 @@ Seleccione el tipo de domicilio
 <label for="no">No</label>
 </div>
 <div> <br>
-		<label for="ingresos">¿Cuales son tus ingresos mensuales?</label>
+		<label for="number">¿Cuales son tus ingresos mensuales?</label>
 		<input type="number" min="0" placeholder="$500.000">
 	</div>
 	<div><br>
