--- a/index.html
+++ b/index.html
@@ -1183,8 +1183,8 @@
 	<option value="1099">Úmbita</option>
 			</select>
 		<div><br>
-			<label for="direccion">Dirección</label>
-			<input type="direccion" name="direccion" placeholder="Carrera 22 #22c-22">
+			<label for="text">Dirección</label>
+			<input type="text" name="direccion" placeholder="Carrera 22 #22c-22">
 		</br>
 		</div>
 		<div><br>
@@ -1234,6 +1234,25 @@ Seleccione el tipo de domicilio
         		<label for="text">¿Por qué quieres adoptar una mascota?</label>
         		<input type="text" name="texto">
         	</div>
+        	<div><br>
+        		¿Tienes otras mascotas?
+        		<input type="radio" name="si">
+        		<label for="si">Si</label>
+        		<input type="radio" name="no">
+        		<label for="no">No</label>
+        	</div>
+        	<div><br>
+        		<label for="number">¿Cuantos ingresos dispones para tu mascota?</label>
+        			<input type="number" min="0" placeholder="$200.000">
+        		</div>
+        		<div><br>
+        		<label for="text">En caso de estar ausente por un tiempo ¿quién cuidará de tu mascota?</label>
+        		<input type="text">
+        	</div>
+
+
+
+
 
 
 
