--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Mascotas</title>
+<title>Mascotas</title></head>
 <body>
 	<form action="" method="post">
 		<div>
@@ -1249,6 +1249,9 @@ Seleccione el tipo de domicilio
         		<label for="text">En caso de estar ausente por un tiempo ¿quién cuidará de tu mascota?</label>
         		<input type="text">
         	</div>
+        </form>
+    </body>
+    </html>
 
 
 
