--- a/index.html
+++ b/index.html
@@ -2,34 +2,32 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Mascotas</title></head>
+<title>Mascotas</title>
+<link rel="stylesheet" type="text/css" href="style.css">
+</head> 
 <body>
 	<form action="" method="post">
-		<div>
-			<br><center>
-			<button type="button">Acceder al formulario</button>
-		</br></center>
+		<header>
+		<div class="boton">
+			<center>
+			<button type="button">Acceder al formulario</button><p>
+		</center>
 		</div>
-		<div>
-			<br>
-			<label for="date">Fecha de solicitud</label>
+	</header>
+		<section class="cont">
+		<div class="sol">
+			<label for="date">Fecha de solicitud</label><p>
 			<input type="date" name="solicitud">
-		</br>
 		</div>
 		<div>
-			<br>
-			<label for="name">Nombre Completo</label>
+			<label for="name">Nombre Completo</label><p>
 			<input type="name" name="nombre" placeholder="Pepito Pérez">
-		</br>
 		</div>
 		<div>
-			<br>
-			<label for="mail">Correo Electronico</label>
+			<label for="mail">Correo Electronico</label><p>
 			<input type="email" name="mail" placeholder="alguien@ejemplo.com">
-		</br>
 		</div>
 		<div>
-			<br>
 			Seleccionar sexo
 			<input type="radio" name="hombre">
 			<label for="hombre">Hombre</label>
@@ -37,11 +35,9 @@
 			<label for="mujer">Mujer</label>
 			<input type="radio" name="otro">
 			<label for="otro">Otro</label>
-		</br>
 		</div>
-		<div>
-			<br>
-			<label for="departamento">Departamento</label>
+		<P><div>
+			<label for="departamento">Departamento</label><P>
 			<select>
 				<option>Amazonas</option>
 				<option>Antioquia</option>
@@ -77,10 +73,9 @@
 				<option>Vaupés</option>
 				<option>Vichada</option>
 				</select>
-			</br>
 		</div>
-		<div><br>
-			<label for="ciudad">Ciudad</label>
+		<div>
+			<label for="ciudad">Ciudad</label><P>
 			<select> 
 			<option value="1">Abriaqui</option>
 	<option value="2">Acacías</option>
@@ -1182,12 +1177,11 @@
 	<option value="1098">Íquira</option>
 	<option value="1099">Úmbita</option>
 			</select>
-		<div><br>
-			<label for="text">Dirección</label>
+		<div>
+			<label for="text">Dirección</label><P>
 			<input type="text" name="direccion" placeholder="Carrera 22 #22c-22">
-		</br>
 		</div>
-		<div><br>
+		<div>
 Seleccione el tipo de domicilio
 
 			<input type="radio" name="casa">
@@ -1196,57 +1190,57 @@ Seleccione el tipo de domicilio
 			<label for="apartamento">Apartamento</label>
 			<input type="radio" name="finca">
 			<label for="finca">Finca</label>
-<input type="radio" name="otro"
-<label </br>
+<input type="radio" name="otro">
 </div>
-<section><br>
-<label for="text">Especifique "otro"</label>
-<input type="text" name="text">
-</section><br>
+<p>
 <section>
-<label for="number">Número de integrantes del domicilio</label>
+<label for="text">Especifique "otro"</label><p>
+<input type="text" name="text">
+</section>
+<section>
+<label for="number">Número de integrantes del domicilio</label><p>
 <input type="number" min="1"name="text">
 </section>
-<div><br>
-¿Tienes experiencia con los animales?
+<div>
+¿Tienes experiencia con los animales?<P>
 <input type="radio" name="si">
 <label for="si">Si</label>
 <input type="radio" name="no>
 <label for="no">No</label>
 </div>
-<div> <br>
-		<label for="number">¿Cuales son tus ingresos mensuales?</label>
+<div>
+		<label for="number">¿Cuales son tus ingresos mensuales?</label><p>
 		<input type="number" min="0" placeholder="$500.000">
 	</div>
-	<div><br>
-		<label for="text">¿Cuanto tiempo piensas dedicarle a tu mascota?</label>
+	<div>
+		<label for="text">¿Cuanto tiempo piensas dedicarle a tu mascota?</label><P>
 		<input type="text">
         </div>
-    <div><br>
-        	<label for="date">Fecha de nacimiento</label>
+    <div>
+        	<label for="date">Fecha de nacimiento</label><P>
         	<input type="date" name="date">
         	</div>
-        	<div><br>
-        		<label for="tel">Telefono</label>
+        	<div>
+        		<label for="tel">Telefono</label><P>
         		<input type="tel" name="telefono" placeholder="5557776">
         	</div>
-        	<div><br>
-        		<label for="text">¿Por qué quieres adoptar una mascota?</label>
+        	<div>
+        		<label for="text">¿Por qué quieres adoptar una mascota?</label><P>
         		<input type="text" name="texto">
         	</div>
-        	<div><br>
-        		¿Tienes otras mascotas?
+        	<div>
+        		¿Tienes otras mascotas?<P>
         		<input type="radio" name="si">
         		<label for="si">Si</label>
         		<input type="radio" name="no">
         		<label for="no">No</label>
         	</div>
-        	<div><br>
-        		<label for="number">¿Cuantos ingresos dispones para tu mascota?</label>
+        	<div>
+        		<label for="number">¿Cuantos ingresos dispones para tu mascota?</label><p>
         			<input type="number" min="0" placeholder="$200.000">
         		</div>
-        		<div><br>
-        		<label for="text">En caso de estar ausente por un tiempo ¿quién cuidará de tu mascota?</label>
+        		<div>
+        		<label for="text">En caso de estar ausente por un tiempo ¿quién cuidará de tu mascota?</label><P>
         		<input type="text">
         	</div>
         </form>
