--- a/index.html
+++ b/index.html
@@ -7,26 +7,30 @@
 </head> 
 <body>
 	<form action="" method="post">
-		<header>
 		<div class="boton">
 			<center>
 			<button type="button">Acceder al formulario</button><p>
 		</center>
 		</div>
-	</header>
 		<section class="cont">
 		<div class="sol">
 			<label for="date">Fecha de solicitud</label><p>
 			<input type="date" name="solicitud">
 		</div>
-		<div>
+		<div class="columna">
 			<label for="name">Nombre Completo</label><p>
-			<input type="name" name="nombre" placeholder="Pepito Pérez">
+			<input type="name" name="nombre" placeholder="Pepito Pérez"></div>
+			<div class="columna">
+			<label for="date">Fecha de nacimiento</label><P>
+        	<input type="date" name="date">
 		</div>
-		<div>
+		<div class="columna2">
 			<label for="mail">Correo Electronico</label><p>
 			<input type="email" name="mail" placeholder="alguien@ejemplo.com">
 		</div>
+		<div class="columna2">
+		<label for="tel">Telefono</label><P>
+        		<input type="tel" name="telefono" placeholder="5557776"></div>
 		<div>
 			Seleccionar sexo
 			<input type="radio" name="hombre">
@@ -36,7 +40,7 @@
 			<input type="radio" name="otro">
 			<label for="otro">Otro</label>
 		</div>
-		<P><div>
+		<P><div class="columna3">
 			<label for="departamento">Departamento</label><P>
 			<select>
 				<option>Amazonas</option>
@@ -74,7 +78,7 @@
 				<option>Vichada</option>
 				</select>
 		</div>
-		<div>
+		<div class="columna3">
 			<label for="ciudad">Ciudad</label><P>
 			<select> 
 			<option value="1">Abriaqui</option>
@@ -1177,6 +1181,7 @@
 	<option value="1098">Íquira</option>
 	<option value="1099">Úmbita</option>
 			</select>
+		</div>
 		<div>
 			<label for="text">Dirección</label><P>
 			<input type="text" name="direccion" placeholder="Carrera 22 #22c-22">
@@ -1216,14 +1221,10 @@ Seleccione el tipo de domicilio
 		<label for="text">¿Cuanto tiempo piensas dedicarle a tu mascota?</label><P>
 		<input type="text">
         </div>
-    <div>
+    <div class="clearfix"></div>
         	<label for="date">Fecha de nacimiento</label><P>
-        	<input type="date" name="date">
-        	</div>
-        	<div>
-        		<label for="tel">Telefono</label><P>
-        		<input type="tel" name="telefono" placeholder="5557776">
-        	</div>
+        	<input type="date" class="clearfix" name="date">
+        	</div> 	
         	<div>
         		<label for="text">¿Por qué quieres adoptar una mascota?</label><P>
         		<input type="text" name="texto">
@@ -1243,6 +1244,7 @@ Seleccione el tipo de domicilio
         		<label for="text">En caso de estar ausente por un tiempo ¿quién cuidará de tu mascota?</label><P>
         		<input type="text">
         	</div>
+        </div>
         </form>
     </body>
     </html>
