--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		<label for="tel">Telefono</label><P>
         		<input type="tel" name="telefono" placeholder="5557776"></div>
 		<div>
-			Seleccionar sexo
+			Seleccione su género:
 			<input type="radio" name="hombre">
 			<label for="hombre">Hombre</label>
 			<input type="radio" name="mujer">
@@ -1187,7 +1187,7 @@
 			<input type="text" name="direccion" placeholder="Carrera 22 #22c-22">
 		</div>
 		<div>
-Seleccione el tipo de domicilio
+Seleccione el tipo de domicilio:
 
 			<input type="radio" name="casa">
 			<label for="casa">Casa</label>
@@ -1221,9 +1221,8 @@ Seleccione el tipo de domicilio
 		<label for="text">¿Cuanto tiempo piensas dedicarle a tu mascota?</label><P>
 		<input type="text">
         </div>
-    <div class="clearfix"></div>
         	<label for="date">Fecha de nacimiento</label><P>
-        	<input type="date" class="clearfix" name="date">
+        	<input type="date" name="date">
         	</div> 	
         	<div>
         		<label for="text">¿Por qué quieres adoptar una mascota?</label><P>
@@ -1244,6 +1243,11 @@ Seleccione el tipo de domicilio
         		<label for="text">En caso de estar ausente por un tiempo ¿quién cuidará de tu mascota?</label><P>
         		<input type="text">
         	</div>
+        <div class="botones">
+        	<button type="button">Guardar</button>
+        </div>
+        <div class="boton">
+        	<button type="button">Botón de respuestas</button>
         </div>
         </form>
     </body>
