--- a/index.html
+++ b/index.html
@@ -1202,44 +1202,41 @@ Seleccione el tipo de domicilio:
 <label for="text">Especifique "otro"</label><p>
 <input type="text" name="text">
 </section>
-<section>
-<label for="number">Número de integrantes del domicilio</label><p>
-<input type="number" min="1"name="text">
+<section class="columna4">
+		<label for="number">Número de integrantes del domicilio</label><p>
+		<input type="number" min="1"name="text">
 </section>
-<div>
-¿Tienes experiencia con los animales?<P>
-<input type="radio" name="si">
-<label for="si">Si</label>
-<input type="radio" name="no>
-<label for="no">No</label>
+<div class="columna4">
+        <label for="text">¿Por qué quieres adoptar una mascota?</label><P>
+        <input type="text" name="texto">
 </div>
-<div>
-		<label for="number">¿Cuales son tus ingresos mensuales?</label><p>
-		<input type="number" min="0" placeholder="$500.000">
-	</div>
-	<div>
-		<label for="text">¿Cuanto tiempo piensas dedicarle a tu mascota?</label><P>
-		<input type="text">
-        </div>
-        	<label for="date">Fecha de nacimiento</label><P>
-        	<input type="date" name="date">
-        	</div> 	
-        	<div>
-        		<label for="text">¿Por qué quieres adoptar una mascota?</label><P>
-        		<input type="text" name="texto">
-        	</div>
-        	<div>
+<div class="columna5">
+¿Tienes experiencia con los animales?<P>
+			<input type="radio" name="si">
+			<label for="si">Si</label>
+			<input type="radio" name="no">
+			<label for="no">No</label>
+</div>
+<div class="columna5">
         		¿Tienes otras mascotas?<P>
         		<input type="radio" name="si">
         		<label for="si">Si</label>
         		<input type="radio" name="no">
         		<label for="no">No</label>
         	</div>
-        	<div>
-        		<label for="number">¿Cuantos ingresos dispones para tu mascota?</label><p>
-        			<input type="number" min="0" placeholder="$200.000">
-        		</div>
-        		<div>
+	<div class="columna6">
+			<label for="number">¿Cuales son tus ingresos mensuales?</label><p>
+			<input type="number" min="0" placeholder="$500.000">
+	</div>
+	<div class="columna6">
+        	<label for="number">¿Cuantos ingresos dispones para tu mascota?</label><p>
+        	<input type="number" min="0" placeholder="$200.000">
+	</div>
+	<div class="columna7">
+		<label for="text">¿Cuanto tiempo piensas dedicarle a tu mascota?</label><P>
+		<input type="text">
+        </div> 	
+        		<div class="columna7">
         		<label for="text">En caso de estar ausente por un tiempo ¿quién cuidará de tu mascota?</label><P>
         		<input type="text">
         	</div>
