--- a/index.html
+++ b/index.html
@@ -1248,7 +1248,7 @@ Seleccione el tipo de domicilio:
         	</div>
         	<div class="botones">
         	<button type="button">Guardar</button></div>
-        	<footer class="botones">
+        	<footer class="botoncito">       
         	<button type="button">Botón de respuestas</button>
         </footer>
         </form>
