--- a/index.html
+++ b/index.html
@@ -1247,8 +1247,8 @@ Seleccione el tipo de domicilio:
         		<input type="text">
         	</div>
         	<div class="botones">
-        	<button type="button">Guardar</button></div>
-        	<footer class="botones">
+        	<button type="button">Guardar</button></div></section>
+        	<footer class="final">
         	<button type="button">Botón de respuestas</button>
         </footer>
         </form>
